--- a/index.html
+++ b/index.html
@@ -13,14 +13,12 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
     crossorigin="anonymous">
 <link rel="stylesheet" href="https://i.icomoon.io/public/temp/5f12d63a74/UntitledProject/style.css">
-<link rel="stylesheet" 
-      href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
+
   <!-- Latest compiled and minified JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
     crossorigin="anonymous"></script>
-<link rel="stylesheet" href="styles.css">
-<link rel="stylesheet" href="form.css">
-
+<link rel="stylesheet" href="./styles.css">
+<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
 
 </head>
 
@@ -60,6 +58,6 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-<script type="text/javascript" src="inline.js"></script><script type="text/javascript" src="styles.967650113481c5982ed9.bundle.js"></script><script type="text/javascript" src="main.d01c196fb659450c4beb.bundle.js"></script></body>
+<script type="text/javascript" src="inline.js"></script><script type="text/javascript" src="styles.a8cd8f6b6f09fb71a792.bundle.js"></script><script type="text/javascript" src="main.d01c196fb659450c4beb.bundle.js"></script></body>
 
 </html>
